// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it can render as a link 1`] = `
<div>
  <a
    class="govuk-button lbh-button"
    href="/"
  >
    Test Link
  </a>
</div>
`;

exports[`it renders correctly 1`] = `
<div>
  <button
    class="govuk-button lbh-button"
    type="button"
  >
    Test Button
  </button>
</div>
`;

exports[`it renders the correct variant 1`] = `
<div>
  <button
    class="govuk-button lbh-button govuk-button--secondary lbh-button--secondary"
    type="button"
  >
    Test Link
  </button>
</div>
`;

exports[`it shows a loading state 1`] = `
<div>
  <button
    aria-disabled="true"
    class="govuk-button lbh-button"
    disabled=""
    type="button"
  >
    <span
      class="button-loading-indicator"
    >
      <span>
        Loading...
      </span>
    </span>
    Test Button
  </button>
</div>
`;
